test/scc_test/exp/semantic-errors/065.t
void test()
{
    2.0 & 1;
}